adjust red color

--- a/css/express/express.css
+++ b/css/express/express.css
@@ -160,7 +160,7 @@ body {
   }
 }
 .express-options .option.red {
-  background-color: #9e4031;
+  background-color: #a03f27;
 }
 .express-options .option.black {
   background-color: #2d2926;
